# YADRO_Recruitment_Task

./: .clang-format  CMakeLists.txt  Computer_Club.cpp  Computer_Club.h  Computer_Club_STRUCTS.h  README.md  helper_functions.cpp  helper_functions.h  parsing_functions.cpp  parsing_functions.h  task.cpp
input/: inp2.txt  inp3.txt
tests/: test_HELPRES.cpp  test_PARSING.cpp
